update index file

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       <p><span class="typed" data-typed-items="AI/ML Engineer, Software Engineer,Deep Learning Engineer, Data Scientist"></span></p>
       <div class="social-links">
         <a href="https://github.com/Muhammed-AhmedGithup" class="twitter"><i class="bx bxl-github"></i></a>
-        <a href="www.linkedin.com/in/muhammed-ali-970329277" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="www.linkedin.com/in/muhammed-ali-970329277" class="medium"><i class="bi bi-medium"></i></a>
+        <a href="https://www.linkedin.com/in/muhammed-ali-970329277/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/muhammed-ali-970329277/" class="medium"><i class="bi bi-medium"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
